Portfolio images now tabbable

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal1-modal-lg" src="img/portfolio/memEater800x600.jpg" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal1-modal-lg" src="img/portfolio/memEater800x600.jpg" alt="MemEater" tabindex="0">
               </div>
 
               <!-- Modal -->
@@ -169,7 +169,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal2-modal-lg" src="img/portfolio/ids800x6002.jpg" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal2-modal-lg" src="img/portfolio/ids800x6002.jpg" alt="Information Dissemination Specialist" tabindex="0">
               </div>
 
               <!-- Modal -->
@@ -202,7 +202,7 @@
 
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal3-modal-lg" src="img/portfolio/wageBank800x600.png" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal3-modal-lg" src="img/portfolio/wageBank800x600.png" alt="Wage Per Second" tabindex="0">
               </div>
 
               <!-- Modal -->
@@ -230,7 +230,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal4-modal-lg" src="img/portfolio/summerRip800x600.jpg" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal4-modal-lg" src="img/portfolio/summerRip800x600.jpg" alt="The Summer RIP" tabindex="0">
               </div>
 
               <!-- Modal -->
@@ -259,7 +259,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal5-modal-lg" src="img/portfolio/weatherrific800x600.png" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal5-modal-lg" src="img/portfolio/weatherrific800x600.png" alt="Weatherrific" tabindex="0">
               </div>
 
               <!-- Modal -->
@@ -287,7 +287,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal6-modal-lg" src="img/portfolio/downuts800x600.png" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal6-modal-lg" src="img/portfolio/downuts800x600.png" alt="Downuts" tabindex="0">
               </div>
 
               <!-- Modal -->
@@ -315,7 +315,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal7-modal-lg" src="img/portfolio/marshawnQuotes800x600.png" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal7-modal-lg" src="img/portfolio/marshawnQuotes800x600.png" alt="Marshawn Lynch Random Quote Generator" tabindex="0">
               </div>
 
               <!-- Modal -->
@@ -343,7 +343,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal8-modal-lg" src="img/portfolio/jscalc800x600.png" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal8-modal-lg" src="img/portfolio/jscalc800x600.png" alt="JavaScript Calculator" tabindex="0">
               </div>
 
               <!-- Modal -->
