--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -151,6 +152,11 @@
                     <div class="modal-body">
                       <div class="row">
                         <img src="img/portfolio/memEater1500x800.jpg" class="img-responsive" alt="MemEater">
+                      </div>
+                      <div class="row imageStrip">
+                        <div class="col-xs-4 thumb"><img class="img-responsive img-thumbnail" src="img/portfolio/memEater800x600.jpg" alt="MemEater" tabindex="0"></div>
+                        <div class="col-xs-4 thumb"><img class="img-responsive img-thumbnail" src="img/portfolio/memEater800x600.jpg" alt="MemEater" tabindex="0"></div>
+                        <div class="col-xs-4 thumb"><img class="img-responsive img-thumbnail" src="img/portfolio/memEater800x600.jpg" alt="MemEater" tabindex="0"></div>
                       </div>
                       <div class="row">
                         <div class="col-md-10 col-md-offset-1">
