adding anonnyfunction to portfolio

--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
               </script>
 
               <!-- Modal -->
-              <div id="modalArea">Hello
-              </div>
+              <div id="modalArea">Hello... something went wrong.</div>
 
           </div>
         <hr>
