added favicon, removed Menu text on mobile

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Portfolio website for Web Developer Eve Worthington">
+    <meta name="author" content="Eve Worthington">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#ffffff">
 
     <title>Eve Worthington - Web Dev / Creative Type</title>
 
@@ -39,7 +44,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    Menu <i class="fa fa-bars"></i>
+                    <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
                     <!-- <i class="fa fa-leaf fa-lg"></i> -->
@@ -126,7 +131,8 @@
 
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="content-section text-center">
+    <section class="content-section text-center">
+      <div id="portfolio"></div>
       <div class="portfolio-section">
         <div class="container">
           <div class="row portfolioArea">
