first version of portfolio modals

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
 
 </head>
 <body>
+  <div class="overlay hidden"></div>
   <div class="side-menu-wrapper">
     <div class="side-menu">
       <div class="main-icon">
