--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Portfolio website for Eve Worthington: Web Developer and Bog Witch">
     <meta name="author" content="Eve Worthington">
+    
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Eve Worthington - Bog Witch / Web Dev">
+    <meta name="twitter:description" content="Portfolio website for Eve Worthington: Web Developer and Bog Witch">
+    <meta name="twitter:creator" content="@yesthisiseve">
+    <meta name="twitter:image" content="http://www.eveworthington.com/img/ewcard.png">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Eve Worthington - Bog Witch / Web Dev" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.eveworthington.com/" />
+    <meta property="og:image" content="http://www.eveworthington.com/img/ewcard.png" />
+    <meta property="og:description" content="Portfolio website for Eve Worthington: Web Developer and Bog Witch" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
