--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio website for Eve Worthington: Web Developer and Bog Witch">
+    <meta name="description" content="Eve Worthington's Cool Homepage :)">
     <meta name="author" content="Eve Worthington">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Eve Worthington - Bog Witch / Web Dev">
-    <meta name="twitter:description" content="Portfolio website for Eve Worthington: Web Developer and Bog Witch">
+    <meta name="twitter:title" content="Eve Worthington's Cool Homepage :)">
+    <meta name="twitter:description" content="Homepage of Eve Worthington - It's Cool :)">
     <meta name="twitter:creator" content="@yesthisiseve">
-    <meta name="twitter:image" content="http://www.eveworthington.com/img/ewcard.png">
+    <!-- <meta name="twitter:image" content="http://www.eveworthington.com/img/ewcard.png"> -->
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Eve Worthington - Bog Witch / Web Dev" />
+    <meta property="og:title" content="Eve Worthington's Cool Homepage :)'" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://www.eveworthington.com/" />
-    <meta property="og:image" content="http://www.eveworthington.com/img/ewcard.png" />
-    <meta property="og:description" content="Portfolio website for Eve Worthington: Web Developer and Bog Witch" />
+    <!-- <meta property="og:image" content="http://www.eveworthington.com/img/ewcard.png" /> -->
+    <meta property="og:description" content="Homepage of Eve Worthington - It's Cool :)" />
     
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -29,34 +29,22 @@
     <meta name="theme-color" content="#ffffff">
     <link href="app.css" rel="stylesheet">
 
-    <title>Eve Worthington - Bog Witch / Web Dev</title>
+    <title>Eve Worthington's Cool Homepage :)</title>
 
 </head>
 
 <body>
-  <div class="hut-area">
-    <div class="orb-layer">
-    </div>
-    <div class="hut">
-      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-      <svg id="svg5057" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="850" viewBox="35 15 798 850" width="798" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/">
-       <image id="image5065" xlink:href="img/hutbasesmaller.png" height="850" width="798" y="0" x="0" preserveAspectRatio="none"/>
-       <image id="littlehut" xlink:href="img/littlehutsmaller.png" height="75" width="89" y="401.95" x="555.19" preserveAspectRatio="none"/>
-       <image id="littlesat" xlink:href="img/littlesatsmall.png" height="133" width="117" y="210.08" x="282.91" preserveAspectRatio="none"/>
-      </svg>
-    </div>
-    <div class="title">
-      <div class="eve">Eve Worthington</div>
-      <div class="subtitle">
-        <div class="med witch">300-year-old Bog Witch</div>
-        <div class="and">&</div>
-        <div class="med frontend">Web Developer</div>
-      </div>
-      <div class="btnL btn"><div class="inside-link portfolio"><a href="/portfolio.html">Recent Works</a></div></div>
-      <div class="btnR btn"><div class="inside-link about"><a href="/about.html">About Eve</a></div></div>
-    </div>
+  <div id="main-content">
+    <p> \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ </p>
+    <p> / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / </p>
+    <p> \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ </p>
+    <p> / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / </p>
+    <p> \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ </p>
+    <p> / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / </p>
+    <p> \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ </p>
+    <p> / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / </p>
+    
   </div>
-
   <!-- Contact Section -->
   <div id="contact"><i></i>
     <div class="container">
@@ -68,12 +56,6 @@
                   </li>
                   <li class="btnR">
                       <a href="https://twitter.com/yesthisiseve" target="_blank"><img src="img/twitter.svg" class="inside-link" alt="Twitter"></a>
-                  </li>
-                  <li class="btnL">
-                      <a href="https://github.com/1gb" target="_blank"><img src="img/github.svg" class="inside-link" alt="GitHub"></a>
-                  </li>
-                  <li class="btnR">
-                      <a href="http://codepen.io/1gb/pens/public/" target="_blank"><img src="img/codepen.svg" class="inside-link" alt="CodePen"></a>
                   </li>
                   <li class="btnL">
                       <a href="https://www.instagram.com/256mb/" target="_blank"><img src="img/instagram.svg" class="inside-link" alt="Instagram"></a>
@@ -88,7 +70,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy;2017 Eve Worthington</p>
+            <p>Copyright &copy;2019 Eve Worthington</p>
         </div>
     </footer>
 
