--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </footer>
 
     <script src="lib.js"></script>
-    <script src="app.min.js"></script>
+    <script src="app.js"></script>
 
     <!-- Google Analytics -->
     <script>
