--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div>
               <ul class="social-buttons">
                   <li class="btnL">
-                      <a href="mailto:eve@eveworthington.com"><img src="img/mail.svg" class="inside-link" alt="E-mail eve@eveworthington.com"></a>
+                      <a href="mailto:worthington.ee@gmail.com"><img src="img/mail.svg" class="inside-link" alt="E-mail worthington.ee@gmail.com"></a>
                   </li>
                   <li class="btnR">
                       <a href="https://twitter.com/yesthisiseve" target="_blank"><img src="img/twitter.svg" class="inside-link" alt="Twitter"></a>
@@ -70,7 +70,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy;2019 Eve Worthington</p>
+            <p>Copyright &copy;2021 Eve Worthington</p>
         </div>
     </footer>
 
